# JuggleHub

./: .gitignore  README.md  run_and_log.sh  test_ball_udp.py  test_blue_ball.py
api/v1/: juggler.proto
engine/: CMakeLists.txt
engine/include/: BallTracker.hpp  DNNTracker.hpp  Engine.hpp
engine/models/: metadata.yaml  yolov8n.xml
engine/src/: BallTracker.cpp  DNNTracker.cpp  Engine.cpp  main.cpp
engine/src/modules/: ModuleBase.hpp  PositionToRgbModule.cpp  PositionToRgbModule.hpp  UdpBallColorModule.cpp  UdpBallColorModule.hpp
engine/src/networking/: UdpSender.cpp  UdpSender.hpp
hub/: juggler_pb2.py  juggler_pb2_grpc.py  juggling_data.db  main.py  requirements.txt
hub/components/: __init__.py  database_logger.py  imu_listener.py  ui.py  zmq_client.py  zmq_listener.py
scripts/: build_engine.sh  generate_protos.sh  imu_simulator.py  load_module.py  load_module_script.sh  run_hub.sh
